Add example for event annotations

--- a/org.idempiere.event.annotation.example/pom.xml
+++ b/org.idempiere.event.annotation.example/pom.xml
@@ -7,6 +7,6 @@
 		<version>${revision}</version>
 		<relativePath>../parent-repository-pom.xml</relativePath>
 	</parent>
-	<artifactId>org.idempiere.callout.annotation.example</artifactId>
+	<artifactId>org.idempiere.event.annotation.example</artifactId>
 	<packaging>eclipse-plugin</packaging>	
 </project>
