--- a/org.idempiere.window.validator.example/build.properties
+++ b/org.idempiere.window.validator.example/build.properties
@@ -2,5 +2,4 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/org.idempiere.window.validator.example.QtyInvoicedWindowValidator.xml,\
-               OSGI-INF/org.idempiere.window.validator.example.CopyOrderLineWindowValidator.xml
+               OSGI-INF/
